Enumerating with movenext in binaryrepresentation class. Corrected method GetValueInBytes to return size of ushort.

--- a/ComparisonTests/ComparisonTests.csproj
+++ b/ComparisonTests/ComparisonTests.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\application\application.csproj" />
     <ProjectReference Include="..\dotnetcomparison\application\application.csproj" />
   </ItemGroup>
 
